# school_automation

./: .gitignore  fake_signature.xlsx  total_work_hours_calculator.py
total_work_hours_calculator/: pyproject.toml  total_work_hours_calculator.py
